--- a/tests/org.jboss.reddeer.gef.test/pom.xml
+++ b/tests/org.jboss.reddeer.gef.test/pom.xml
@@ -12,6 +12,14 @@
 		<version>1.1.0-SNAPSHOT</version>
 	</parent>
 
+	<repositories>
+		<repository>
+			<id>gef-legacy-examples</id>
+			<url>http://download.eclipse.org/tools/gef/updates/legacy/releases/</url>
+			<layout>p2</layout>
+		</repository>
+	</repositories>
+	
 	<build>
 		<plugins>
 			<plugin>
