--- a/tests/org.jboss.reddeer.workbench.test/plugin.xml
+++ b/tests/org.jboss.reddeer.workbench.test/plugin.xml
@@ -10,6 +10,10 @@
         	name="Workbench Test"
         	category="org.jboss.reddeer.workbench.test.ui.category"
         	class="org.jboss.reddeer.workbench.test.ui.views.LabelView" />
+    	<view id="org.jboss.reddeer.workbench.test.ui.views.dirtylabelview"
+        	name="Workbench Dirty Test"
+        	category="org.jboss.reddeer.workbench.test.ui.category"
+        	class="org.jboss.reddeer.workbench.test.ui.views.DirtyLabelView" />
 	</extension>
 	<extension
          point="org.eclipse.ui.editors">
