--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -22,7 +22,6 @@
 		<customArgLine></customArgLine>
 		<logMessageFilter>ALL</logMessageFilter>
 		<pauseFailedTest>false</pauseFailedTest>
-		<recordScreenCast>false</recordScreenCast>
 		<relativeScreenshotDirectory>.${file.separator}target${file.separator}screenshots</relativeScreenshotDirectory>
 		<surefire.timeout>2400</surefire.timeout>
 	</properties>
@@ -54,7 +53,7 @@
 					<useUIHarness>true</useUIHarness>
 					<useUIThread>false</useUIThread>
 					<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
-					<argLine>-DlogMessageFilter=${logMessageFilter} -DpauseFailedTest=${pauseFailedTest} -DrecordScreenCast=${recordScreenCast} -DrelativeScreenshotDirectory=${relativeScreenshotDirectory} ${platformSystemProperties} ${customArgLine} ${junitExtensionsProperties} -XX:MaxPermSize=512m -Xmx512m</argLine>
+					<argLine>-DlogMessageFilter=${logMessageFilter} -DpauseFailedTest=${pauseFailedTest} -DrelativeScreenshotDirectory=${relativeScreenshotDirectory} ${platformSystemProperties} ${customArgLine} ${junitExtensionsProperties} -XX:MaxPermSize=512m -Xmx512m</argLine>
 					<product>org.eclipse.platform.ide</product>
 					<application>org.eclipse.ui.ide.workbench</application>
 					<dependencies combine.children="append">
