--- a/archetype/src/test/resources/projects/jboss-reddeer-archetype/archetype.properties
+++ b/archetype/src/test/resources/projects/jboss-reddeer-archetype/archetype.properties
@@ -1,7 +1,7 @@
 package=foo.bar.myplugin.mars
 version=1.0.0-SNAPSHOT
 groupId=foo.bar.myplugin
-artifactId=mars
-tycho_version=0.21.0
-eclipse_platform=mars
+artifactId=neon
+tycho_version=0.26.0
+eclipse_platform=neon
 reddeer_version=master
