--- a/archetype/src/test/resources/projects/jboss-reddeer-archetype/archetype.properties
+++ b/archetype/src/test/resources/projects/jboss-reddeer-archetype/archetype.properties
@@ -1,5 +1,5 @@
-package=foo.bar.myplugin.mars
-version=1.0.0-SNAPSHOT
+package=foo.bar.myplugin.neon
+version=2.0.0-SNAPSHOT
 groupId=foo.bar.myplugin
 artifactId=neon
 tycho_version=0.26.0
