--- a/plugins/org.jboss.reddeer.recorder/pom.xml
+++ b/plugins/org.jboss.reddeer.recorder/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>org.jboss.reddeer</groupId>
-        <artifactId>plugins</artifactId>
+		<artifactId>plugins</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-  <artifactId>org.jboss.reddeer.recorder</artifactId>
-  <packaging>eclipse-plugin</packaging>
-  <name>Red Deer Recorder</name>
+	<artifactId>org.jboss.reddeer.recorder</artifactId>
+	<packaging>eclipse-plugin</packaging>
+	<name>Red Deer Recorder</name>
 </project>
