Maximize workbench shell & make sure its visible when tests are started. Fixes #1517

--- a/plugins/org.jboss.reddeer.junit.extension/plugin.xml
+++ b/plugins/org.jboss.reddeer.junit.extension/plugin.xml
@@ -13,6 +13,9 @@
             class="org.jboss.reddeer.junit.extension.before.test.impl.SetOpenAssociatedPerspectiveExt">
       </client>
       <client
+            class="org.jboss.reddeer.junit.extension.before.test.impl.MaximizeAndFocusWorkbench">
+      </client>
+      <client
       		class="org.jboss.reddeer.junit.extension.log.collector.BeforesLogCollector">
       </client>
    </extension>
