--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,14 @@
 				<configuration>
 					<sourcepath>${basedir}/plugins</sourcepath>
 				</configuration>
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<goals>
+							<goal>aggregate</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
