AERI preferences and wizards implemented. Aeri is disabled with before extensions. Fixes #1658 and #1683
Signed-off-by: Rastislav Wagner <rawagner@redhat.com>

--- a/plugins/org.eclipse.reddeer.junit.extension/plugin.xml
+++ b/plugins/org.eclipse.reddeer.junit.extension/plugin.xml
@@ -29,6 +29,9 @@
       <client
       		class="org.eclipse.reddeer.junit.extension.log.collector.BeforesLogCollector">
       </client>
+      <client
+            class="org.eclipse.reddeer.junit.extension.before.test.impl.DisableAERI">
+      </client>
    </extension>
    <extension
          point="org.eclipse.reddeer.junit.after.test">
