--- a/plugins/org.eclipse.reddeer.junit/plugin.xml
+++ b/plugins/org.eclipse.reddeer.junit/plugin.xml
@@ -15,4 +15,5 @@
    <extension-point id="org.eclipse.reddeer.junit.before.test" name="BeforeTest" schema="schema/org.eclipse.reddeer.junit.before.test.exsd"/>
    <extension-point id="org.eclipse.reddeer.junit.after.test" name="AfterTest" schema="schema/org.eclipse.reddeer.junit.after.test.exsd"/>
    <extension-point id="org.eclipse.reddeer.junit.issue.tracker" name="IssueTracker" schema="schema/org.eclipse.reddeer.junit.issue.tracker.exsd"/>
+   <extension-point id="org.eclipse.reddeer.junit.requirement" name="RedDeer Requirement" schema="schema/org.eclipse.reddeer.junit.requirement.exsd"/>
 </plugin>
