--- a/plugins/org.eclipse.reddeer.requirements/pom.xml
+++ b/plugins/org.eclipse.reddeer.requirements/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>org.eclipse.reddeer</groupId>
 		<artifactId>plugins</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>2.0.0.Beta</version>
 	</parent>
 
 </project>
