--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -17,7 +17,7 @@
 	<parent>
 		<groupId>org.eclipse.reddeer</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>2.0.0.Beta</version>
 	</parent>
 	<artifactId>plugins</artifactId>
 	<name>RedDeer Plugins</name>
