--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<groupId>org.eclipse.reddeer</groupId>
 	<artifactId>parent</artifactId>
 	<name>RedDeer Parent POM File</name>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0.Beta</version>
 	<packaging>pom</packaging>
 
 	<properties>
