--- a/features/pom.xml
+++ b/features/pom.xml
@@ -15,7 +15,7 @@
         <parent>
                 <groupId>org.eclipse.reddeer</groupId>
                 <artifactId>parent</artifactId>
-                <version>2.0.0.Beta</version>
+                <version>2.0.0-SNAPSHOT</version>
         </parent>
 	<groupId>org.eclipse.reddeer</groupId>
 	<artifactId>features</artifactId>
