--- a/plugins/org.eclipse.reddeer.junit/pom.xml
+++ b/plugins/org.eclipse.reddeer.junit/pom.xml
@@ -13,6 +13,6 @@
 	<parent>
 		<groupId>org.eclipse.reddeer</groupId>
 		<artifactId>plugins</artifactId>
-		<version>2.0.0.Beta</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 </project>
