--- a/plugins/org.eclipse.reddeer.spy/pom.xml
+++ b/plugins/org.eclipse.reddeer.spy/pom.xml
@@ -14,7 +14,7 @@
  	<parent>
  		<groupId>org.eclipse.reddeer</groupId>
  		<artifactId>plugins</artifactId>
- 		<version>2.0.0.Beta</version>
+ 		<version>2.0.0-SNAPSHOT</version>
  	</parent>
  	
 	<modelVersion>4.0.0</modelVersion>
