--- a/site/pom.xml
+++ b/site/pom.xml
@@ -22,4 +22,62 @@
 		<artifactId>parent</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho.extras</groupId>
+				<artifactId>tycho-p2-extras-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<executions>
+					<execution>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>mirror</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<source>
+						<!-- source repositories to mirror from -->
+						<repository>
+							<url>${swtbot-update-site}</url>
+							<layout>p2</layout>
+							<!-- supported layouts are "p2-metadata", "p2-artifacts", and "p2" 
+								(for joint repositories; default) -->
+						</repository>
+					</source>
+
+					<!-- starting from here all configuration parameters are optional -->
+					<!-- they are only shown here with default values for documentation 
+						purpose -->
+
+					<!-- List of IUs to mirror. If omitted, allIUs will be mirrored. -->
+					<!-- Omitted IU version element means latest version of the IU -->
+					<ius>
+						<iu>
+							<id>org.eclipse.swtbot.generator.feature.feature.group</id>
+						</iu>
+					</ius>
+					<!-- The destination directory to mirror to. -->
+					<destination>${project.build.directory}/repository</destination>
+					<!-- Whether only strict dependencies should be followed. -->
+					<!-- "strict" means perfect version match -->
+					<followStrictOnly>false</followStrictOnly>
+					<!-- Whether or not to follow optional requirements. -->
+					<includeOptional>true</includeOptional>
+					<!-- Whether or not to follow non-greedy requirements. -->
+					<includeNonGreedy>true</includeNonGreedy>
+					<!-- don't mirror artifacts, only metadata -->
+					<mirrorMetadataOnly>false</mirrorMetadataOnly>
+					<!-- whether to compress the content.xml/artifacts.xml -->
+					<compress>true</compress>
+					<!-- whether to append to the target repository content -->
+					<append>true</append>
+					<!-- whether to mirror pack200 artifacts also. Available since tycho-extras 
+						0.17.0 -->
+					<includePacked>true</includePacked>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
