--- a/site/pom.xml
+++ b/site/pom.xml
@@ -9,17 +9,27 @@
     Contributors:
         Red Hat Inc. - initial API and implementation
  -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.eclipse.reddeer.site</artifactId>
 	<name>RedDeer Site</name>
 	<packaging>eclipse-repository</packaging>
-
 	<parent>
 		<groupId>org.eclipse.reddeer</groupId>
 		<artifactId>parent</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-repository-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<includeAllDependencies>true</includeAllDependencies>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
