--- a/tests/org.eclipse.reddeer.eclipse.test/pom.xml
+++ b/tests/org.eclipse.reddeer.eclipse.test/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>org.eclipse.reddeer</groupId>
 		<artifactId>tests</artifactId>
-		<version>2.0.0.Final</version>
+		<version>2.0.1-SNAPSHOT</version>
 	</parent>
 
 	<properties>
