--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.eclipse.reddeer</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.0.0.Final</version>
+		<version>2.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>tests</artifactId>
 	<name>RedDeer Tests</name>
