--- a/features/org.eclipse.reddeer.tests.feature/pom.xml
+++ b/features/org.eclipse.reddeer.tests.feature/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>org.eclipse.reddeer</groupId>
 		<artifactId>features</artifactId>
-		<version>2.0.1-SNAPSHOT</version>
+		<version>2.0.1.Final</version>
 	</parent>
 	<build>
 		<plugins>
