--- a/plugins/org.eclipse.reddeer.core/pom.xml
+++ b/plugins/org.eclipse.reddeer.core/pom.xml
@@ -19,6 +19,6 @@
 	<parent>
 		<groupId>org.eclipse.reddeer</groupId>
 		<artifactId>plugins</artifactId>
-		<version>2.0.1-SNAPSHOT</version>
+		<version>2.0.1.Final</version>
 	</parent>
 </project>
