--- a/site/pom.xml
+++ b/site/pom.xml
@@ -18,7 +18,7 @@
 	<parent>
 		<groupId>org.eclipse.reddeer</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.0.1-SNAPSHOT</version>
+		<version>2.0.1.Final</version>
 	</parent>
 	<build>
 		<plugins>
