--- a/tests/org.eclipse.reddeer.core.test/pom.xml
+++ b/tests/org.eclipse.reddeer.core.test/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>org.eclipse.reddeer</groupId>
 		<artifactId>tests</artifactId>
-		<version>2.0.1-SNAPSHOT</version>
+		<version>2.0.1.Final</version>
 	</parent>
 
 	<profiles>
