--- a/plugins/org.eclipse.reddeer.codegen/pom.xml
+++ b/plugins/org.eclipse.reddeer.codegen/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.eclipse.reddeer</groupId>
 		<artifactId>plugins</artifactId>
-		<version>2.0.1.Final</version>
+		<version>2.1.0-SNAPSHOT</version>
 	</parent>	
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.eclipse.reddeer.codegen</artifactId>
