--- a/tests/org.eclipse.reddeer.ui.test/pom.xml
+++ b/tests/org.eclipse.reddeer.ui.test/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>org.eclipse.reddeer</groupId>
 		<artifactId>tests</artifactId>
-		<version>2.0.1.Final</version>
+		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 	
 	<profiles>
