--- a/tests/org.eclipse.reddeer.common.test/pom.xml
+++ b/tests/org.eclipse.reddeer.common.test/pom.xml
@@ -22,4 +22,14 @@
 		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 
+	<!-- Used by JaCoCo to generate an aggregated report -->
+	<dependencies>
+		<dependency>
+			<groupId>org.eclipse.reddeer</groupId>
+			<artifactId>org.eclipse.reddeer.common</artifactId>
+			<version>${project.version}</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
+
 </project>
