--- a/tests/org.eclipse.reddeer.graphiti.test/pom.xml
+++ b/tests/org.eclipse.reddeer.graphiti.test/pom.xml
@@ -22,6 +22,16 @@
 		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 
+	<!-- Used by JaCoCo to generate an aggregated report -->
+	<dependencies>
+		<dependency>
+			<groupId>org.eclipse.reddeer</groupId>
+			<artifactId>org.eclipse.reddeer.graphiti</artifactId>
+			<version>${project.version}</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
