--- a/tests/org.eclipse.reddeer.ui.test/pom.xml
+++ b/tests/org.eclipse.reddeer.ui.test/pom.xml
@@ -21,6 +21,16 @@
 		<artifactId>tests</artifactId>
 		<version>2.1.0-SNAPSHOT</version>
 	</parent>
+
+	<!-- Used by JaCoCo to generate an aggregated report -->
+	<dependencies>
+		<dependency>
+			<groupId>org.eclipse.reddeer</groupId>
+			<artifactId>org.eclipse.reddeer.ui</artifactId>
+			<version>${project.version}</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 	
 	<profiles>
 		<profile>
