--- a/tests/org.eclipse.reddeer.eclipse.test/plugin.xml
+++ b/tests/org.eclipse.reddeer.eclipse.test/plugin.xml
@@ -17,6 +17,8 @@
    			<moduleType types="PHP" versions="1.0"/>
    			<moduleType types="wst.web" versions="1.0"/>
    		</runtimeType>
+   		<runtimeType id="org.eclipse.reddeer.eclipse.test.wst.server.testserverruntime2" name="Test runtime 2" description="Second testing runtime" facetRuntimeComponent="org.eclipse.wst.server.http.runtime" facetRuntimeVersion="1.0" class="org.eclipse.reddeer.eclipse.test.wst.server.ui.TestServerRuntime2">
+   		</runtimeType>
    	</extension>
    	<extension point="org.eclipse.wst.server.core.serverTypes">
    		<serverType
