--- a/archetype/src/test/resources/projects/eclipse-reddeer-archetype/archetype.properties
+++ b/archetype/src/test/resources/projects/eclipse-reddeer-archetype/archetype.properties
@@ -1,18 +1,7 @@
-###############################################################################
-# Copyright (c) 2017 Red Hat, Inc and others.
-# This program and the accompanying materials are made available under the
-# terms of the Eclipse Public License 2.0 which is available at
-# http://www.eclipse.org/legal/epl-2.0.
-#
-# SPDX-License-Identifier: EPL-2.0
-#
-# Contributors:
-#     Red Hat, Inc - initial API and implementation
-###############################################################################
 package=foo.bar.myplugin.mars
 version=1.0.0-SNAPSHOT
 groupId=foo.bar.myplugin
-artifactId=oxygen
+artifactId=photon
 tycho_version=0.26.0
-eclipse_platform=oxygen
+eclipse_platform=photon
 reddeer_version=master
