--- a/archetype/src/test/resources/projects/eclipse-reddeer-archetype/archetype.properties
+++ b/archetype/src/test/resources/projects/eclipse-reddeer-archetype/archetype.properties
@@ -1,7 +1,7 @@
 package=foo.bar.myplugin.mars
 version=1.0.0-SNAPSHOT
 groupId=foo.bar.myplugin
-artifactId=photon
+artifactId=2018-09
 tycho_version=0.26.0
-eclipse_platform=photon
+eclipse_platform=2018-09
 reddeer_version=master
