--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -16,7 +16,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.eclipse.reddeer</groupId>
-	<version>2.3.0.Final</version>
+	<version>2.4.0-SNAPSHOT</version>
 	<artifactId>eclipse-reddeer-archetype</artifactId>
 	<packaging>maven-archetype</packaging>
 	<name>RedDeer Archetype</name>
