--- a/features/pom.xml
+++ b/features/pom.xml
@@ -25,6 +25,7 @@
 	
 	
 	<modules>
+		<module>org.eclipse.reddeer.e4.feature</module>
 		<module>org.eclipse.reddeer.eclipse.feature</module>
 		<module>org.eclipse.reddeer.gef.spy.feature</module>
 		<module>org.eclipse.reddeer.swt.feature</module>
