--- a/archetype/src/test/resources/projects/eclipse-reddeer-archetype/archetype.properties
+++ b/archetype/src/test/resources/projects/eclipse-reddeer-archetype/archetype.properties
@@ -2,6 +2,6 @@ package=foo.bar.myplugin.simrel
 version=1.0.0-SNAPSHOT
 groupId=foo.bar.myplugin
 artifactId=reddeer.archetype
-tycho_version=0.22.0
-eclipse_platform=photon
+tycho_version=1.2.0
+eclipse_platform=2018-12
 reddeer_version=master
