Issue-1958 Fixing categories in org.eclipse.reddeer.workbench.test.ui
Signed-off-by: Josef Kopriva <jkopriva@redhat.com>

--- a/tests/org.eclipse.reddeer.workbench.test/plugin.xml
+++ b/tests/org.eclipse.reddeer.workbench.test/plugin.xml
@@ -15,16 +15,16 @@
 <plugin>
    	<extension point="org.eclipse.ui.views">
    		<category 
-           id="org.eclipse.reddeer.workbench.test.ui.category"
+           id="org.eclipse.reddeer.workbench.test.ui"
            name="RedDeer Test Workbench">
         </category>
     	<view id="org.eclipse.reddeer.workbench.test.ui.views.labelview"
         	name="Workbench Test"
-        	category="org.eclipse.reddeer.workbench.test.ui.category"
+        	category="org.eclipse.reddeer.workbench.test.ui"
         	class="org.eclipse.reddeer.workbench.test.ui.views.LabelView" />
     	<view id="org.eclipse.reddeer.workbench.test.ui.views.dirtylabelview"
         	name="Workbench Dirty Test"
-        	category="org.eclipse.reddeer.workbench.test.ui.category"
+        	category="org.eclipse.reddeer.workbench.test.ui"
         	class="org.eclipse.reddeer.workbench.test.ui.views.DirtyLabelView" />
 	</extension>
 	<extension
